resources/assets/css/base.css
body {
  background: #f0f3f3;
}

a {
  color: darkgreen;
  text-decoration: underline;
}

a:hover {
  color: #2b9e2b;
}

img {
  max-width: 100%;
}

select,
select:focus,
select:hover {
  -webkit-appearance: menulist;
  -moz-appearance: menulist;
  background: none;
}

input[type='submit'] {
  background-color: darkgreen;
  border: 0.1rem solid darkgreen;
}

.button,
button,
input[type='button'],
input[type='reset'] {
  color: #606c76;
  background-color: #fafafa;
  border: 0.1rem solid #606c76;
}

.button:focus,
.button:hover,
button:focus,
button:hover,
input[type='button']:focus,
input[type='button']:hover,
input[type='reset']:focus,
input[type='reset']:hover {
  background-color: #fafafa;
  border-color: #2b9e2b;
  color: #606c76;
  outline: 0;
}

input[type='submit']:focus,
input[type='submit']:hover {
  background-color: darkgreen;
  border: 0.1rem solid darkgreen;
  opacity: 0.9;
}

.button[disabled]:focus,
.button[disabled]:hover,
button[disabled]:focus,
button[disabled]:hover,
input[type='button'][disabled]:focus,
input[type='button'][disabled]:hover,
input[type='reset'][disabled]:focus,
input[type='reset'][disabled]:hover,
input[type='submit'][disabled]:focus,
input[type='submit'][disabled]:hover {
  background-color: darkgreen;
  border: 0.1rem solid darkgreen;
  color: #fff;
}

input[type='email']:focus,
input[type='number']:focus,
input[type='password']:focus,
input[type='search']:focus,
input[type='tel']:focus,
input[type='text']:focus,
input[type='url']:focus,
textarea:focus,
select:focus {
  border-color: darkgreen;
}

